[gd_scene load_steps=10 format=3 uid="uid://iiopsl2jnac1"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_my7jt"]
[ext_resource type="FontFile" uid="uid://b51e4e1htly8h" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="2_vjami"]
[ext_resource type="Script" path="res://Scripts/level_name.gd" id="3_gcr7d"]
[ext_resource type="Texture2D" uid="uid://dgj4alkt3dygf" path="res://Assets/Sprites/MainMenu/piece (1)-1.png-1.png.png" id="5_vkvan"]
[ext_resource type="Texture2D" uid="uid://c0ienm8yq51eu" path="res://Assets/Sprites/MainMenu/piece (1)-1.png (1).png" id="6_0ud8q"]
[ext_resource type="Script" path="res://Scripts/Buttons/PlayButton.gd" id="7_23w57"]
[ext_resource type="Script" path="res://Scripts/Buttons/credits_button.gd" id="8_lk7t2"]
[ext_resource type="Script" path="res://Scripts/Buttons/ExitButton.gd" id="9_lbjnf"]

[sub_resource type="LabelSettings" id="LabelSettings_b18gn"]
font = ExtResource("2_vjami")
font_size = 64
outline_size = 10

[node name="MainMenu" type="Node2D"]

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_my7jt")
metadata/_edit_horizontal_guides_ = [695.0]

[node name="Piece" type="Label" parent="MainMenu"]
layout_mode = 2
offset_left = -707.0
offset_top = -258.0
offset_right = 189.0
offset_bottom = -170.0
scale = Vector2(0.835, 0.835)
text = "Piece"
label_settings = SubResource("LabelSettings_b18gn")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("3_gcr7d")
vertical_speed = 0.25
vertical_intensity = 10.0
horizontal_speed = 0.5

[node name="piece" type="Sprite2D" parent="MainMenu/Piece"]
modulate = Color(1.49205e-06, 0.473994, 0.53103, 1)
position = Vector2(450.299, 34.7305)
scale = Vector2(0.605, 0.605)
texture = ExtResource("5_vkvan")

[node name="By" type="Label" parent="MainMenu"]
layout_mode = 2
offset_left = -372.0
offset_top = -259.0
offset_right = 524.0
offset_bottom = -171.0
scale = Vector2(0.835, 0.835)
text = "by"
label_settings = SubResource("LabelSettings_b18gn")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("3_gcr7d")
vertical_speed = 0.25
vertical_intensity = 10.0
horizontal_speed = 0.5

[node name="piece" type="Sprite2D" parent="MainMenu/By"]
modulate = Color(1.49205e-06, 0.473994, 0.53103, 1)
z_index = -2
position = Vector2(444.311, 40.7185)
scale = Vector2(0.605, 0.605)
texture = ExtResource("6_0ud8q")

[node name="Piece1" type="Label" parent="MainMenu"]
layout_mode = 2
offset_left = -41.9999
offset_top = -258.0
offset_right = 854.0
offset_bottom = -170.0
scale = Vector2(0.835, 0.835)
text = "Piece"
label_settings = SubResource("LabelSettings_b18gn")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("3_gcr7d")
vertical_speed = 0.25
vertical_intensity = 10.0
horizontal_speed = 0.5

[node name="piece" type="Sprite2D" parent="MainMenu/Piece1"]
modulate = Color(1.49205e-06, 0.473994, 0.53103, 1)
z_index = -2
position = Vector2(442, 39)
scale = Vector2(0.605, 0.605)
texture = ExtResource("5_vkvan")

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
layout_mode = 2
offset_left = -360.0
offset_top = -94.0
offset_right = 362.0
offset_bottom = -49.0
script = ExtResource("3_gcr7d")
vertical_intensity = 7.0
horizontal_speed = 0.25

[node name="Start" type="Button" parent="MainMenu/CenterContainer"]
custom_minimum_size = Vector2(210, 45)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_vjami")
theme_override_font_sizes/font_size = 24
text = "Start"
script = ExtResource("7_23w57")

[node name="CenterContainer2" type="CenterContainer" parent="MainMenu"]
layout_mode = 2
offset_left = -360.0
offset_top = -22.0
offset_right = 362.0
offset_bottom = 23.0
script = ExtResource("3_gcr7d")
vertical_intensity = 7.0
horizontal_speed = 0.25

[node name="Credits" type="Button" parent="MainMenu/CenterContainer2"]
custom_minimum_size = Vector2(210, 45)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_vjami")
theme_override_font_sizes/font_size = 24
text = "Credits"
script = ExtResource("8_lk7t2")

[node name="CenterContainer3" type="CenterContainer" parent="MainMenu"]
layout_mode = 2
offset_left = -360.0
offset_top = 61.0
offset_right = 362.0
offset_bottom = 106.0
script = ExtResource("3_gcr7d")
vertical_intensity = 7.0
horizontal_speed = 0.25

[node name="Exit" type="Button" parent="MainMenu/CenterContainer3"]
custom_minimum_size = Vector2(210, 45)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_vjami")
theme_override_font_sizes/font_size = 24
disabled = true
text = "Exit"
script = ExtResource("9_lbjnf")

[connection signal="mouse_entered" from="MainMenu/CenterContainer/Start" to="MainMenu/CenterContainer/Start" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MainMenu/CenterContainer/Start" to="MainMenu/CenterContainer/Start" method="_on_mouse_exited"]
[connection signal="pressed" from="MainMenu/CenterContainer/Start" to="MainMenu/CenterContainer/Start" method="_on_pressed"]
[connection signal="mouse_entered" from="MainMenu/CenterContainer2/Credits" to="MainMenu/CenterContainer2/Credits" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MainMenu/CenterContainer2/Credits" to="MainMenu/CenterContainer2/Credits" method="_on_mouse_exited"]
[connection signal="pressed" from="MainMenu/CenterContainer2/Credits" to="MainMenu/CenterContainer2/Credits" method="_on_pressed"]
[connection signal="mouse_entered" from="MainMenu/CenterContainer3/Exit" to="MainMenu/CenterContainer3/Exit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MainMenu/CenterContainer3/Exit" to="MainMenu/CenterContainer3/Exit" method="_on_mouse_exited"]
[connection signal="pressed" from="MainMenu/CenterContainer3/Exit" to="MainMenu/CenterContainer3/Exit" method="_on_pressed"]
